server/src/main/java/com/example/cardealership/web/error/MlPredictionException.java
package com.example.cardealership.web.error;

public class MlPredictionException extends MlServiceException {
    public MlPredictionException(String message, Throwable cause) {
        super(message, cause);
    }
}